--- a/jour1.Rmd
+++ b/jour1.Rmd
@@ -112,8 +112,85 @@ small_logs <- read_csv("../data/small_logs.csv")
 
 Si besoin, ajuster l'import au moyen des arguments `col_types`, `locale` ou encore `na`
 
-small_logs <- read_csv("../data/small_logs.csv")
+```{r}
+small_logs <- read_csv("../data/small_logs.csv",
+                       na = c("", "-", "NA"),
+                       col_types = cols(
+  timestamp = col_datetime(format = ""),
+  source = col_character(),
+  agent = col_character(),
+  auth = col_character(),
+  bytes = col_integer(),
+  clientip = col_character(),
+  command = col_character(),
+  domain = col_character(),
+  facility = col_character(),
+  geoip_area_code = col_integer(),
+  geoip_city_name = col_character(),
+  geoip_continent_code = col_character(),
+  geoip_coordinates = col_character(),
+  geoip_country_code2 = col_character(),
+  geoip_country_code3 = col_character(),
+  geoip_country_name = col_character(),
+  geoip_dma_code = col_integer(),
+  geoip_ip = col_character(),
+  geoip_latitude = col_double(),
+  geoip_location = col_character(),
+  geoip_longitude = col_double(),
+  geoip_postal_code = col_character(),
+  geoip_real_region_name = col_character(),
+  geoip_region_name = col_character(),
+  geoip_timezone = col_character(),
+  httpversion = col_double(),
+  ident = col_character(),
+  level = col_integer(),
+  location = col_character(),
+  message = col_character(),
+  referrer = col_character(),
+  request = col_character(),
+  response = col_integer(),
+  type = col_character(),
+  verb = col_character()
+))
+```
+
+## La notion de fonction
+
+```{r}
+sum(1, 2, 3)
+
+a <- sum(1, 2, 3)
+
+a
+```
 
 
+
+# Le tidyverse 
+
+## La notion de tidy data
+
+> “Happy families are all alike; every unhappy family is unhappy in its own way.” – Leo Tolstoy
+
+> “Tidy datasets are all alike, but every messy dataset is messy in its own way.” – Hadley Wickham
+
+- À chaque variable sa propre colonne
+- À chaque observation sa propre ligne
+- À chaque valeur sa propre cellule
+
+## La notion de tidy data
+
+```{r, echo = FALSE, out.width='90%', fig.align='center'}
+knitr::include_graphics("./img/tidy-1.png")
+```
+
+## La notion de tidy data
+
+- Mettre chaque jeu de données dans un `tibble`
+- Mettre chaque variable dans une colonne 
+
+## Un exemple de untidy data
+
+https://www.data.gouv.fr/fr/datasets/election-presidentielle-2012-resultats-572126/
 
 
